--- a/LibrarinProject/LibrarinProject.csproj
+++ b/LibrarinProject/LibrarinProject.csproj
@@ -75,6 +75,12 @@
     <Compile Include="BookRequestForm.Designer.cs">
       <DependentUpon>BookRequestForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="EditBookForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="EditBookForm.Designer.cs">
+      <DependentUpon>EditBookForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="LibraryConnector.cs" />
     <Compile Include="LoginForm.cs">
       <SubType>Form</SubType>
@@ -108,6 +114,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="BookRequestForm.resx">
       <DependentUpon>BookRequestForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="EditBookForm.resx">
+      <DependentUpon>EditBookForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="LoginForm.resx">
       <DependentUpon>LoginForm.cs</DependentUpon>
