--- a/LibrarinProject/LibrarinProject.csproj
+++ b/LibrarinProject/LibrarinProject.csproj
@@ -62,6 +62,7 @@
     <Compile Include="AddBookForm.Designer.cs">
       <DependentUpon>AddBookForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="AddBookModel.cs" />
     <Compile Include="AdminForm.cs">
       <SubType>Form</SubType>
     </Compile>
